
NEW FEATURES

    o `digest.gdsn()` to create hash function digests (e.g., md5, sha1,
      sha256, sha384, sha512)

    o new function `summarize.gdsn()`

    o `show()` displays the content preview

    o define C MACRO 'COREARRAY_REGISTER_BIT32' and 'COREARRAY_REGISTER_BIT64'
      in CoreDEF.h

    o new C functions `GDS_R_Append()` and `GDS_R_AppendEx()` in R_GDS.h

    o it allows efficiently concatenating compressed blocks (i.e., ZIP_RA
      and LZ4_RA)

BUG FIXES

    o v1.7.7: fix a potential issue of uninitialized value in the first
      parameter passed to 'LZ4_decompress_safe_continue' (detected by valgrind)


CHANGES IN VERSION 1.6.0-1.6.2
-------------------------

    o the version number was bumped for the Bioconductor release version 3.2

    o 'attribute.trim=FALSE' in `print.gdsn.class()` by default

NEW FEATURES

    o `diagnosis.gds()` returns detailed data block information

BUG FIXES

    o v1.6.2: it might be a rare bug (i.e., stop the program when getting
      Z_BUF_ERROR), now the GDS kernel ignores Z_BUF_ERROR in deflate()
      and inflate(); see http://zlib.net/zlib_how.html for further explanation


CHANGES IN VERSION 1.5.7-1.5.16
-------------------------

NEW FEATURES

    o a new argument 'seldim' in `assign.gdsn()`

    o `append.gdsn()` allows appending data from a GDS node

    o `add.gdsn()` allows 'storage' to be a 'gdsn.class' object

    o `put.attr.gdsn()` allows 'val' to be a 'gdsn.class' object

    o `readex.gdsn()` allows using numeric vectors to select the subset

    o the values returned from `read.gdsn()` and `readex.gdsn()` can be
      substituted by the values defined by users: '.value' and '.substitute'
      are added to `read.gdsn()` and `readex.gdsn()`

    o new functions `copyto.gdsn()`, `getfolder.gdsn()` and `permdim.gdsn()`

    o a new option 'replace+rename' in `moveto.gdsn()`

    o the values passed to the user-defined function in `apply.gdsn()` and