@@ -2,8 +2,8 @@ Package: gdsfmt
 Type: Package
 Title: R Interface to CoreArray Genomic Data Structure (GDS) Files
 Version: 1.7.11
-Date: 2016-02-02
-Depends: R (>= 2.14.0)
+Date: 2016-02-04
+Depends: R (>= 2.15.0)
 Imports: methods
 Suggests: parallel, digest, crayon, RUnit, knitr, BiocGenerics
 Author: Xiuwen Zheng [aut, cre], Stephanie Gogarten [ctb], Jean-loup
