@@ -15,8 +15,12 @@ NEW FEATURES
 
     o new C functions `GDS_R_Append()` and `GDS_R_AppendEx()` in R_GDS.h
 
-    o it allows efficiently concatenating compressed blocks (i.e., ZIP_RA
+    o allows efficiently concatenating compressed blocks (i.e., ZIP_RA
       and LZ4_RA)
+
+UTILITIES
+
+    o `paste(..., sep="")` is replaced by `paste0(...)`
 
 BUG FIXES
 
